--- a/app/src/main/res/layout/activity_edit_phone.xml
+++ b/app/src/main/res/layout/activity_edit_phone.xml
@@ -12,6 +12,7 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/editPhoneSV"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent">
 
         <LinearLayout
@@ -20,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/saveEmailCV"
             android:layout_alignParentTop="true"
-            android:visibility="gone"
+            android:visibility="visible"
             android:orientation="vertical"
             android:paddingStart="@dimen/_21sdp"
             android:paddingTop="@dimen/_45sdp"
@@ -143,7 +144,7 @@
         android:layout_alignParentTop="true"
         android:background="#f2f4f5"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
