--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -15,34 +15,39 @@
         android:background="@drawable/backgrndbtmcornrs"
         android:paddingLeft="@dimen/_21sdp"
         android:paddingTop="@dimen/_20sdp"
-        android:paddingBottom="@dimen/_15sdp">
+        android:paddingBottom="@dimen/_12sdp">
 
-        <LinearLayout
-            android:id="@+id/layoutBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp">
 
-            <ImageView
+            <LinearLayout
+                android:id="@+id/layoutBack"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_chevron_left" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_chevron_left" />
-        </LinearLayout>
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="Visa Debit ••••8765"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp"></TextView>
+        </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tvCard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:fontFamily="@font/opensans_semibold"
-            android:text="Visa Debit ••••8765"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp"></TextView>
     </RelativeLayout>
 
     <ScrollView
@@ -92,9 +97,10 @@
                             android:id="@+id/etName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                            android:fontFamily="@font/opensans_semibold"
                             android:focusable="false"
+                            android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
                             android:inputType="text|textCapSentences"
                             android:maxLength="50"
@@ -102,8 +108,7 @@
                             android:padding="@dimen/_14sdp"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -211,9 +216,9 @@
                             android:id="@+id/etAddress1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
-                            android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
                             android:inputType="textVisiblePassword|textCapSentences"
                             android:maxLength="100"
@@ -222,8 +227,8 @@
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textColorHint="@color/light_gray"
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -272,9 +277,9 @@
                             android:id="@+id/etAddress2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
-                            android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
                             android:inputType="textVisiblePassword|textCapSentences"
                             android:maxLength="100"
@@ -283,8 +288,8 @@
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textColorHint="@color/light_gray"
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -307,9 +312,9 @@
                             android:id="@+id/etCity"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
-                           android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
                             android:inputType="textVisiblePassword|textCapSentences"
                             android:maxLength="50"
@@ -317,8 +322,8 @@
                             android:padding="@dimen/_14sdp"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textColorHint="@color/light_gray"
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -387,6 +392,7 @@
                                 android:id="@+id/etState"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:autofillHints="creditCardSecurityCode"
                                 android:cursorVisible="false"
                                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                 android:editable="false"
@@ -405,8 +411,7 @@
                                 android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursor_color"
                                 android:textIsSelectable="false"
-                                android:textSize="@dimen/_12ssp"
-                                android:autofillHints="creditCardSecurityCode"/>
+                                android:textSize="@dimen/_12ssp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -456,9 +461,9 @@
                             android:id="@+id/etZipcode"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:digits="1234567890"
                             android:fontFamily="@font/opensans_semibold"
-                            android:textColorHint="@color/light_gray"
                             android:imeOptions="actionDone"
                             android:inputType="number|textNoSuggestions"
                             android:maxLength="5"
@@ -466,8 +471,8 @@
                             android:padding="@dimen/_14sdp"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textColorHint="@color/light_gray"
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -525,6 +530,7 @@
                                 android:id="@+id/etCountry"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:autofillHints="creditCardSecurityCode"
                                 android:enabled="false"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionNext"
@@ -539,8 +545,7 @@
                                 android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursor_color"
                                 android:textIsSelectable="false"
-                                android:textSize="@dimen/_12ssp"
-                                android:autofillHints="creditCardSecurityCode"/>
+                                android:textSize="@dimen/_12ssp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
                     </RelativeLayout>
