--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginEnd="@dimen/_21sdp"
         android:layout_marginTop="@dimen/_45sdp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:fitsSystemWindows="true">
 
         <LinearLayout
@@ -470,7 +470,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#F2F4F5"
-        android:visibility="gone">
+        android:visibility="visible">
 
 
         <LinearLayout
@@ -842,7 +842,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_43sdp"
                     android:layout_below="@id/countryRL"
-                    android:layout_marginTop="@dimen/_34sdp"
+                    android:layout_marginTop="@dimen/_50sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     app:cardBackgroundColor="@color/inactive_color"
                     app:cardCornerRadius="@dimen/_21sdp">
