--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll_signature_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/bg_view_color"
@@ -14,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:padding="@dimen/_14sdp">
+            android:padding="@dimen/_12sdp">
 
             <ImageView
                 android:id="@+id/iv_signature_close"
@@ -30,12 +31,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:fontFamily="@font/opensans_semibold"
                 android:lineSpacingExtra="9.3sp"
-                android:layout_centerVertical="true"
                 android:onClick="onDoneClicked"
-                android:text="@string/done"
                 android:padding="@dimen/_4sdp"
+                android:text="@string/done"
                 android:textColor="@color/light_gray"
                 android:textSize="@dimen/_16ssp"
                 android:textStyle="normal" />
@@ -77,7 +78,7 @@
         android:id="@+id/rl_rotate_message_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/active_green"
+        android:background="@color/transparent_black"
         android:visibility="gone">
 
         <TextView
