--- a/app/src/main/res/layout/activity_business_receive_payment.xml
+++ b/app/src/main/res/layout/activity_business_receive_payment.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_14sdp"
-            android:text="@string/receive_payment"
+            android:text="Receive Payment"
             android:textSize="@dimen/_16ssp"
             android:fontFamily="@font/opensans_bold"
             android:layout_marginBottom="@dimen/_11sdp"
@@ -264,7 +264,6 @@
                         android:id="@+id/divider"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:layout_below="@+id/tvWalletAddress"
                         android:layout_marginTop="@dimen/_20sdp"
                         android:background="@color/at_gray" />
 
