--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -72,36 +72,33 @@
                 android:layout_below="@+id/tvMessage"
                 android:layout_marginTop="@dimen/_21sdp"
                 android:hint="@string/email"
-                android:textColorHint="@color/text_color"
+                android:textColorHint="@color/light_gray"
                 app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                 app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                 app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                 app:boxCornerRadiusTopStart="@dimen/_10sdp"
                 app:boxStrokeColor="@color/primary_green"
                 app:errorIconDrawable="@null"
-                app:expandedHintEnabled="false"
                 app:hintTextColor="@color/primary_green">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="creditCardSecurityCode"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                     android:fontFamily="@font/opensans_semibold"
-                    android:hint="Coyni@example.com"
                     android:imeOptions="actionDone"
                     android:inputType="textEmailAddress"
                     android:maxLength="255"
+                    android:maxLines="1"
                     android:padding="@dimen/_12sdp"
+                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                    android:singleLine="true"
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp"
-                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
-                    android:singleLine="true"
-                    android:maxLines="1"
-                    android:autofillHints="creditCardSecurityCode"
-                    />
+                    android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
