--- a/app/src/main/res/drawable-xxxhdpi/corner_grey.xml
+++ b/app/src/main/res/drawable-xxxhdpi/corner_grey.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <corners android:radius="@dimen/_33sdp"/>
     <gradient android:angle="-90"
-        android:startColor="@color/light_gray"
-        android:centerColor="@color/light_gray"
-        android:endColor="@color/light_gray"/>
+        android:startColor="@color/primary_light_gray"
+        android:centerColor="@color/primary_light_gray"
+        android:endColor="@color/primary_light_gray"/>
 </shape>
