--- a/app/src/main/res/layout/activity_merchants_agrement.xml
+++ b/app/src/main/res/layout/activity_merchants_agrement.xml
@@ -84,7 +84,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_editicon"
+                    android:src="@drawable/ic_sign"
                     android:layout_gravity="center"
                     android:layout_marginBottom="@dimen/_13sdp"
                     />
