--- a/app/src/main/res/layout/activity_open_new_account.xml
+++ b/app/src/main/res/layout/activity_open_new_account.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,14 +7,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingStart="@dimen/_22sdp"
-        android:paddingEnd="@dimen/_22sdp"
-
-        >
+        android:paddingStart="@dimen/_21sdp"
+        android:paddingEnd="@dimen/_21sdp">
     <ImageView
+        android:id="@+id/backCloseIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/_10sdp"
         android:src="@drawable/ic_x"
         android:layout_marginTop="@dimen/_44sdp"
         android:layout_marginBottom="@dimen/_13sdp"
@@ -26,17 +23,18 @@
             android:text="Open New Account"
             android:fontFamily="@font/opensans_bold"
             android:textSize="@dimen/_16ssp"
-            android:textColor="@color/primary_black"
-            android:layout_marginBottom="@dimen/_60sdp"
+            android:textColor="@color/black"
+            android:layout_marginBottom="@dimen/_65sdp"
             />
         <LinearLayout
+            android:id="@+id/newcompanyLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_14sdp"
-            android:background="@drawable/bg_white_color_light_border"
+            android:background="@drawable/bg_white_color_light_blue_border"
             android:paddingStart="@dimen/_8sdp"
-            android:paddingTop="@dimen/_13sdp"
-            android:paddingBottom="@dimen/_14sdp">
+            android:paddingTop="@dimen/_19sdp"
+            android:paddingBottom="@dimen/_19sdp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -57,13 +55,14 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/newdbaLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_14sdp"
-            android:background="@drawable/bg_white_color_light_border"
+            android:background="@drawable/bg_white_color_light_blue_border"
             android:paddingStart="@dimen/_8sdp"
-            android:paddingTop="@dimen/_13sdp"
-            android:paddingBottom="@dimen/_14sdp">
+            android:paddingTop="@dimen/_19sdp"
+            android:paddingBottom="@dimen/_19sdp">
 
             <ImageView
                 android:layout_width="wrap_content"
